⏳ Implement cancel and timeout
Each command now has an execution timeout and an exit timeout.
Send interrupt when execution timeout is exceeded.
Kill when exit timeout is exceeded.

Add `/cancel <index>` for command cancellation.

--- a/docs/config.json
+++ b/docs/config.json
@@ -5,13 +5,17 @@
         {
             "id": 123456789,
             "commands": [
-                [
-                    "date"
-                ],
-                [
-                    "date",
-                    "-Iseconds"
-                ]
+                {
+                    "name": "date"
+                },
+                {
+                    "name": "date",
+                    "args": [
+                        "-Iseconds"
+                    ],
+                    "execTimeoutSec": 15,
+                    "exitTimeoutSec": 5
+                }
             ]
         }
     ]
