⏲️ rcebot: improve timeout config
While here, fix incorrect use of exec timeout as exit timeout.

--- a/docs/config.json
+++ b/docs/config.json
@@ -13,8 +13,8 @@
                     "args": [
                         "-Iseconds"
                     ],
-                    "execTimeoutSec": 15,
-                    "exitTimeoutSec": 5
+                    "execTimeout": "15s",
+                    "exitTimeout": "5s"
                 }
             ]
         }
