--- a/docs/config.json
+++ b/docs/config.json
@@ -1,6 +1,16 @@
 {
     "token": "1234567:4TT8bAc8GHUspu3ERYn-KGcvsvGB9u_n4ddy",
     "url": "",
+    "webhook": {
+        "enabled": false,
+        "listenNetwork": "unix",
+        "listenAddress": "/run/cubic-rce-bot.sock",
+        "listenOwner": "http",
+        "listenGroup": "http",
+        "listenMode": "0660",
+        "secretToken": "",
+        "url": ""
+    },
     "users": [
         {
             "id": 123456789,
