--- a/docs/systemd/system/cubic-rce-bot@.service
+++ b/docs/systemd/system/cubic-rce-bot@.service
@@ -4,7 +4,7 @@ After=network-online.target
 Wants=network-online.target
 
 [Service]
-ExecStart=/usr/bin/cubic-rce-bot -confPath /etc/cubic-rce-bot/%i.json -zapConf systemd
+ExecStart=/usr/bin/cubic-rce-bot -confPath /etc/cubic-rce-bot/%i.json -logNoTime
 ExecReload=/usr/bin/kill -USR1 $MAINPID
 
 [Install]
