--- a/docs/systemd/user/cubic-rce-bot.service
+++ b/docs/systemd/user/cubic-rce-bot.service
@@ -4,7 +4,7 @@ After=network-online.target
 Wants=network-online.target
 
 [Service]
-ExecStart=/usr/bin/cubic-rce-bot -confPath %E/cubic-rce-bot/config.json -zapConf systemd
+ExecStart=/usr/bin/cubic-rce-bot -confPath %E/cubic-rce-bot/config.json -logNoTime
 ExecReload=/usr/bin/kill -USR1 $MAINPID
 
 [Install]
